# rust_galaxy

./: .gitignore  Cargo.toml  README.md  cargo_check_output.txt  cargo_run_output.txt
src/: camera.rs  constants.rs  main.rs
src/graphics/: camera.rs  mod.rs  renderer.rs  shader.rs
src/old_code/: galaxy.rs  main.rs  physics.rs  render.rs
src/old_code/render/: app.rs  context.rs  graphics.rs  mod.rs
src/physics/: collision.rs  gravity.rs  mod.rs  object.rs
src/render/: context.rs
src/ui/: input.rs  mod.rs
src/utils/: geometry.rs  grid.rs  mod.rs
