[package]
name = "Rust_Gravity_3D"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29.10", features = ["rwh_05"] }
glow = "0.13.1"
glutin = "0.31.3"
glutin-winit = "0.4.2"
glam = "0.24.0"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
raw-window-handle = "0.5.2"